fix: isolate bundled runtime from external Java DLLs